[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/font/monster16.tres" type="DynamicFont" id=1]
[ext_resource path="res://Game/ui/Settings.gd" type="Script" id=2]

[node name="Settings" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = 200.0
margin_right = -350.0
margin_bottom = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -50.5
margin_right = 52.5
margin_bottom = 50.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenerateButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 105.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "GENERATE"

[node name="UploadButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 37.0
margin_right = 105.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "UPLOAD"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 105.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "LOAD"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Panel/VBoxContainer/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
